# cthulhu

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yaml
benches/: bench.rs
data/: transactions.csv
data/full/: output_example.csv  transactions.csv
docs/uml/: flow.puml
src/: args.rs  constants.rs  lib.rs  main.rs  read.rs  transaction.rs
src/engine/: actions.rs  core.rs  database.rs  mod.rs  registry.rs
tests/: main-test.rs
workflows/: audit.yaml  ci.yaml
